# fastchess

./: README.md  fastchess.c  pyproject.toml
.github/workflows/: publish.yml
docs/: index.html  robots.txt  site.webmanifest  sitemap.xml
