[build-system]
requires = ["setuptools>=61", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fastchess"
version = "0.1.1"
description = "High-performance Python chess library in C: legal move generation, SAN/UCI parsing, and NumPy tensor export"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "PeargentLabs", email = "tarun.peargentlabs@gmail.com" },
]
requires-python = ">=3.9"
dependencies = ["numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://peargentlabs.github.io/fastchess/"
Repository = "https://github.com/Peargent-Labs/fastchess"
"Bug Tracker" = "https://github.com/Peargent-Labs/fastchess/issues"
