[build-system]
requires = ["setuptools>=61", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fastchess"
version = "0.1.2"
description = "High-performance Python chess library written in C — fast legal move generation, SAN/UCI parsing, FEN support, and NumPy tensor export for ML pipelines. By PeargentLabs."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "PeargentLabs", email = "tarun.peargentlabs@gmail.com" },
]
requires-python = ">=3.9"
dependencies = ["numpy"]
keywords = [
    "chess",
    "python-chess",
    "fast-chess",
    "fastchess",
    "chess-engine",
    "UCI",
    "SAN",
    "FEN",
    "numpy",
    "machine-learning",
    "chess-tensor",
    "move-generation",
    "peargent",
    "peargentlabs",
    "otter-chess",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://peargentlabs.github.io/fastchess/"
Documentation = "https://peargentlabs.github.io/fastchess/"
Repository = "https://github.com/PeargentLabs/fastchess"
"Bug Tracker" = "https://github.com/PeargentLabs/fastchess/issues"
